2006-04-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (AccAXRrl1, AccAXLrl1): changed to real rotate by 1,
	  (AccAXRsh1): added, shift right by 1,
	  (AccAXLsh, AccAXRsh, AccAXRshS): updated for AccAXRrl1, AccAXRsh1 and
	   AccAXLrl1
	* support/regression/tests/rotate.c: use <stdint.h> and enabled ds390

2006-04-25 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCast.c (decorateType): partial fix for RFE 1475769,
	remove cast to same type
	* src/SDCCast.c (decorateType): fix for RFE 1475742,
	optimize 'ifx (op == 0)' resp. 'ifx (op != 0)'
	* as/z80/Makefile,
	* link/z80/Makefile: removed, they have moved to
	Makefile.in files
	* configure,
	* configure.in: replaced duplicate message about ucsim by missing sdcpp
	* install-sh: fix bug #1204398 by setting umask 0022
	* device/lib/Makefile: separate build of z80 and gbz80 lib

2006-04-24 Bernhard Held <bernhard AT bernhardheld.de>

	Enabled VPATH feature: changed nearly all Makefiles (149 files).
	See sdccman.lyx '2.4.10 VPATH feature' about how to use it.

	One basic decision: e.g. src/clean.mk includes further files. In order
	to make this work there are two solutions:
	- rename another dozen clean.mk to clean_in.mk, add srcdir to them and
	  run configure on them. This way they can use
	  'include $(srcdir)/port-clean.mk'
	- always include clean.mk by the Makefile at the same level. To avoid
	  that `make clean` tries to include and build Makefile.dep the
	  MAKECMDGOALS are examined (see e.g. src/Makefile.in). This has been
	  implemented, because now even `make uninstall` doesn't create
	  Makefile.in. clean.mk could be eliminated by pasting it in
	  Makefile.in.

	* debugger/mcs51/Makefile.in: build own objects from library sources
	(SLIB, SDCC) in current directory

	* configure, configure.in: renamed --disable-device-lib-build in
	--disable-device-lib; added --enable-doc, the required tools are
	searched by configure; added result message; the toolchain for the