@@ -2,12 +2,6 @@
  */
 #include <testfwk.h>
 
-#if defined __mcs51 || defined __ds390 || defined __xa51
-#define XDATA xdata
-#else
-#define XDATA
-#endif
-
 void 
 func( unsigned char a )
 {
@@ -19,7 +13,7 @@ testBadPromotion(void)
 {
 
 #ifdef SDCC
-  unsigned char c=*((unsigned XDATA char*)(0xa000));
+  unsigned char c=*((unsigned xdata char*)(0xa000));
 #else
   unsigned char loc_c;
   unsigned char c=*(unsigned char*)&loc_c;
